--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,23 @@
-version: '3.3'
+version: "3"
+
 services:
   mysqldb:
-    container_name: mysqldb
-    image: mysql:8
-    ports:
-     - '3306:3306'
-    restart : unless-stopped
-    environment:
-         MYSQL_USERNAME: root
-         MYSQL_PASSWORD: pass
-         MYSQL_ROOT_PASSWORD: pass  
+   container_name: mysqldb
+   image: mysql:8
+   restart: unless-stopped
+   ports:
+    - 3307:3306
+   environment:
+    MYSQL_DATABASE: achatdb
+    MYSQL_ROOT_PASSWORD: pass
+   volumes:
+     - /home/mysql/data:/var/lib/mysql --user 1000
 
-  back: 
-    image: achatproject
-    container_name: achatproject
-    restart: on-failure
-    ports:
-      - '8088'
-    depends_on:
-      - mysqldb
+  spring_app:
+   image: achatapp:latest
+   container_name: achatapp
+   restart: on-failure
+   ports:
+    - 8089:8089
+   depends_on:
+    - mysqldb
