--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,32 @@
 version: "3.8"
 
 services:
-  mysqldb:
-    image: mysql:8
-    restart: unless-stopped
-    environment:
-      - MYSQL_ROOT_PASSWORD= root
-    volumes:
-      - db:/var/lib/mysql
-  app:
-    depends_on:
-      - mysqldb
-    image: rihab26/achatapp
+  springapp:
+    image: rihab26/achatdevops
     container_name: achatapp
     restart: on-failure
     ports:
-      - 9090:9090
+      - "8089:8089"
+    environment:
+      - spring.datasource.url=jdbc:mysql://localhost:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    networks:
+      - springmysql-net
+    depends_on:
+      - mysqldb
+
+  mysqldb:
+    image: mysql:8
+    container_name: mysqldb
+    networks:
+      - springmysql-net
+    environment:
+      - MYSQL_ROOT_PASSWORD= root
+      - MYSQL_DATABASE=achatdb
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=
     volumes:
-      - .m2:/root/.m2
-    stdin_open: true
-    tty: true
-volumes:
- db:
-                                                                                                                                                                                                                                        ~                     
+      -/home/mysql/data:/var/lib/mysql
+      
+
+networks:
+  springmysql-net:                                                                                                                                                                                                                                   ~                     
