--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     networks:
       - springmysql-net
     environment:
-      - MYSQL_ROOT_PASSWORD= root
+      - MYSQL_ROOT_PASSWORD= 
       - MYSQL_DATABASE=achatdb
       - MYSQL_USER=root
       - MYSQL_PASSWORD=
