--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,10 @@ services:
     networks:
       - springmysql-net
     environment:
-      - MYSQL_ROOT_PASSWORD= 
+      - MYSQL_ROOT_PASSWORD= 1234
       - MYSQL_DATABASE=achatdb
       - MYSQL_USER=root
-      - MYSQL_PASSWORD=
+      - MYSQL_PASSWORD=1234
     volumes:
       -/home/mysql/data:/var/lib/mysql
       
