--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8089
 ### DATABASE ###
 spring.datasource.url=jdbc:mysql://localhost:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 spring.profiles.active=@spring.profiles.active@
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
