--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,30 @@
-version: '2'
-volumes:
- dbdata:
+version: "3.3"
 
 services:
- mysql:
-  image: mysql:8
-  container_name: mysqldb
-  volumes:
-    - /home/mysql/data:/var/lib/mysql
-  restart: on-failure
-  environment:
-    - MYSQL_ROOT_PASSWORD=root
-    - MYSQL_DATABASE=achatdb
-    - MYSQL_PASSWORD=
- spring_app:
-   image: siwar3398/achat
-   container_name: achatbackend
-   restart: on-failure
-   environment:
-    - spring.datasource.url=jdbc:mysql://localhost:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-   ports:
-    - 8089:8089
+  springapp:
+    image: siwar3398/achat
+    container_name: achatbackend
+    restart: on-failure
+    ports:
+      - "8089:8089"
+    environment:
+      - spring.datasource.url=jdbc:mysql://mysqldb:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    networks:
+      - springmysql-net
+    depends_on:
+      - mysqldb
+
+  mysqldb:
+    image: mysql:8
+    container_name: mysqldb
+    networks:
+      - springmysql-net
+    environment:
+      - MYSQL_ALLOW_EMPTY_PASSWORD=1
+      - MYSQL_DATABASE=achatdb
+    volumes:
+      - /var/lib/mysql
+
+
+networks:
+  springmysql-net:
