--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,24 +8,21 @@ services:
     ports:
       - "8089:8089"
     environment:
-      - spring.datasource.url=jdbc:mysql://localhost:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+      - spring.datasource.url=jdbc:mysql://mysqldb:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     networks:
       - springmysql-net
     depends_on:
       - mysqldb
-
   mysqldb:
     image: mysql:8
     container_name: mysqldb
     networks:
       - springmysql-net
     environment:
-      - MYSQL_ROOT_PASSWORD= 1234
       - MYSQL_DATABASE=achatdb
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=1234
+      - MYSQL_ALLOW_EMPTY_PASSWORD=1
     volumes:
-      -/home/mysql/data:/var/lib/mysql
+      -/var/lib/mysql
       
 
 networks:
