--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,22 +7,25 @@ services:
     restart: on-failure
     ports:
       - "8089:8089"
+    networks:
+      - springmysql-net
     environment:
       - spring.datasource.url=jdbc:mysql://mysqldb:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-    networks:
-      - springmysql-net
     depends_on:
       - mysqldb
+
   mysqldb:
     image: mysql:8
-    container_name: mysqldb
     networks:
       - springmysql-net
+    container_name: mysqldb
     environment:
       - MYSQL_DATABASE=achatdb
       - MYSQL_USERNAME=root
-      - MYSQL_PASSWORD=pass
-      - MYSQL_ROOT_PASSWORD=pass
-     
+      - MYSQL_ALLOW_EMPTY_PASSWORD=1
+
+
+
 networks:
-  springmysql-net:                                                                                                                                                                                                                                   ~                     
+  springmysql-net:
+~                                                                                                                                     ~                       
